--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-json": "*",
+        "alkhwlani/xss-middleware": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
-        "graham-campbell/security": "^9.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/tinker": "^2.5",
@@ -24,7 +24,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
         "nunomaduro/larastan": "1.0",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10",
     },
     "autoload": {
         "psr-4": {
