--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,14 @@
         "php": "^7.3|^8.0",
         "ext-json": "*",
         "alkhwlani/xss-middleware": "^2.0",
+        "darkaonline/l5-swagger": "^8.3",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/tinker": "^2.5",
         "mews/purifier": "^3.3",
+        "propaganistas/laravel-phone": "^4.3",
+        "spatie/laravel-sluggable": "^3.3",
         "staudenmeir/eloquent-json-relations": "^1.1",
         "tymon/jwt-auth": "^1.0"
     },
